# wasm-m3u-player

./: .gitignore  Cargo.toml  README.md  build.sh  serve.sh
.github/workflows/: ci.yml  release.yml
ac3-decode/: Cargo.toml
ac3-decode/src/: bitstream.rs  imdct.rs  lib.rs  tables.rs
demuxer/: Cargo.toml
demuxer/src/: detect.rs  lib.rs  mkv.rs  mp4.rs  types.rs
m3u-core/: Cargo.toml
m3u-core/src/: parser.rs  types.rs
player-core/: Cargo.toml
player-core/src/: events.rs  lib.rs  types.rs
player-wasm/: Cargo.toml
player-wasm/src/: audio.rs  buffer.rs  decoder.rs  fetch.rs  lib.rs  player.rs  renderer.rs  sync.rs
scripts/: install-hooks.sh
www/: app.js  index.html  player-controls.js  style.css
