[package]
name = "player-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM video player — headless API with WebCodecs + Canvas rendering"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

player-core = { path = "../player-core" }
demuxer = { path = "../demuxer" }
m3u-core = { path = "../m3u-core" }
ac3-decode = { path = "../ac3-decode" }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    # WebCodecs (unstable)
    "VideoDecoder",
    "VideoDecoderConfig",
    "VideoDecoderInit",
    "EncodedVideoChunk",
    "EncodedVideoChunkInit",
    "EncodedVideoChunkType",
    "VideoFrame",
    "AudioDecoder",
    "AudioDecoderConfig",
    "AudioDecoderInit",
    "EncodedAudioChunk",
    "EncodedAudioChunkInit",
    "EncodedAudioChunkType",
    "AudioData",
    "AudioDataCopyToOptions",
    "AudioSampleFormat",
    # Web Audio
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
    # Timing
    "Performance",
]
